Revert back to java 8